# uv

./: Cargo.toml
.github/workflows/: ci.yml
crates/uv/: Cargo.toml
crates/uv-auth/: Cargo.toml
crates/uv-auth/src/: keyring.rs
crates/uv-performance-flate2-backend/: Cargo.toml
crates/uv-workspace/: Cargo.toml
crates/uv-workspace/src/: settings.rs  workspace.rs
crates/uv/src/: main.rs
